# seedctl

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.txt  Cargo.toml  DISCLAIMER.md  LEGAL.md  LICENSE  LICENSE-THIRD-PARTY  NOTICE  README-prbr.md  README.md  REPRODUCIBILITY-prbr.md  REPRODUCIBILITY.md  SECURITY.md  VERIFYING_RELEASES.md  agent.sh  cliff.toml
.github/AppImage/: seedctl.desktop
.github/assets/: ascii_seedctl.txt
.github/workflows/: installer.yml  installer.yml.disabled  release.yml
.tools/: agent.sh
crates/: README.md
crates/seedctl-ada/: Cargo.toml
crates/seedctl-ada/src/: derive.rs  lib.rs  output.rs  prompts.rs  rpc.rs  wallet.rs
crates/seedctl-bnb/: Cargo.toml
crates/seedctl-bnb/src/: derive.rs  lib.rs  output.rs  prompts.rs  rpc.rs  scanner.rs  utils.rs  wallet.rs
crates/seedctl-btc/: Cargo.toml
crates/seedctl-btc/src/: derive.rs  lib.rs  output.rs  prompts.rs  rpc.rs  wallet.rs
crates/seedctl-btc/src/utils/: crypto.rs  format.rs  mod.rs
crates/seedctl-core/: Cargo.toml
crates/seedctl-core/src/: args.rs  constants.rs  entropy.rs  error.rs  export.rs  lib.rs  macros.rs  options.rs  ui.rs  utils.rs
crates/seedctl-core/src/chain/: mod.rs
crates/seedctl-core/src/derivation/: mod.rs
crates/seedctl-core/src/entropy/: mod.rs
crates/seedctl-core/src/evm/: mod.rs
crates/seedctl-core/src/mnemonic/: mod.rs
crates/seedctl-core/src/output/: mod.rs
crates/seedctl-core/src/security/: constants.rs  mod.rs
crates/seedctl-core/src/traits/: address.rs  chain.rs  mod.rs  wallet.rs
crates/seedctl-core/src/types/: address.rs  mod.rs  wallet.rs
crates/seedctl-core/src/ui/: table.rs
crates/seedctl-eth/: Cargo.toml
crates/seedctl-eth/src/: derive.rs  lib.rs  output.rs  prompts.rs  rpc.rs  scanner.rs  utils.rs  wallet.rs
crates/seedctl-ltc/: Cargo.toml
crates/seedctl-ltc/src/: derive.rs  lib.rs  output.rs  prompts.rs  rpc.rs  wallet.rs
crates/seedctl-matic/: Cargo.toml
crates/seedctl-matic/src/: derive.rs  lib.rs  output.rs  prompts.rs  rpc.rs  scanner.rs  utils.rs  wallet.rs
crates/seedctl-sol/: Cargo.toml
crates/seedctl-sol/src/: derive.rs  lib.rs  output.rs  rpc.rs  utils.rs  wallet.rs
crates/seedctl-trx/: Cargo.toml
crates/seedctl-trx/src/: derive.rs  lib.rs  output.rs  prompts.rs  rpc.rs  utils.rs  wallet.rs
crates/seedctl-xmr/: Cargo.toml
crates/seedctl-xmr/src/: derive.rs  lib.rs  output.rs  prompts.rs  rpc.rs  wallet.rs
crates/seedctl-xrp/: Cargo.toml
crates/seedctl-xrp/src/: derive.rs  lib.rs  output.rs  prompts.rs  rpc.rs  wallet.rs
installer/: linux.sh  windows.ps1
seedctl/: Cargo.toml  build.rs  resource.rc
seedctl/src/: main.rs
seedctl/src/utils/: args.rs  connection.rs  meta.rs  mod.rs  security.rs  slogan.rs
