[package]
name = "seedctl-ada"
description.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
seedctl-core.workspace = true
hex.workspace = true
bip39.workspace = true
console.workspace = true
dialoguer.workspace = true
serde_json.workspace = true
sha2.workspace = true
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
pbkdf2 = "0.12.2"
ed25519-bip32 = "0.4.1"
cryptoxide = "0.5.1"
bech32 = "0.11.1"
