[package]
name = "seedctl-bnb"
description.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
seedctl-core.workspace = true
bip32.workspace = true
hex.workspace = true
bip39.workspace = true
console.workspace = true
serde_json.workspace = true
