[package]
name = "seedctl-core"
version.workspace = true
description.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
dialoguer.workspace = true
console.workspace = true
rand.workspace = true
crossterm.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
sha2.workspace = true
if-addrs = "0.15.0"
bip39 = "2.2.2"
bip32 = { version = "0.5", features = ["secp256k1"] }
k256 = "0.13.4"
sha3 = "0.10.8"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
