[package]
name = "seedctl-eth"
description.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Crates do projeto
seedctl-core.workspace = true
bip32 = { version = "0.5", features = ["secp256k1"] }

# Dependências próprias
hex.workspace = true
bip39.workspace = true
sha3 = "0.10.8"
k256 = "0.13.4"
reqwest = { version = "0.13.2", features = ["blocking","json"] }

# Dependências globais (UI / export)
dialoguer.workspace = true
console.workspace = true
serde_json.workspace = true


