[package]
name = "seedctl-eth"
description.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Crates do projeto
seedctl-core.workspace = true
bip32.workspace = true

# Dependências próprias
hex.workspace = true
bip39.workspace = true

# Dependências globais (UI / export)
console.workspace = true
serde_json.workspace = true
