[package]
name = "seedctl-ltc"
description.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
seedctl-core.workspace = true
hex.workspace = true
bip39.workspace = true
bip32.workspace = true
sha2.workspace = true
k256 = "0.13.4"
ripemd = "0.1.3"
bech32 = "0.11.1"
dialoguer.workspace = true
console.workspace = true
serde_json.workspace = true
reqwest.workspace = true
