[package]
name = "seedctl-trx"
description.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
seedctl-core.workspace = true
bip32 = { version = "0.5", features = ["secp256k1"] }

hex.workspace = true
bip39.workspace = true
sha3 = "0.10.8"
k256 = "0.13.4"
bs58 = "0.5"

dialoguer.workspace = true
console.workspace = true
serde_json.workspace = true
reqwest.workspace = true
