[package]
name = "seedctl-xmr"
description.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
seedctl-core.workspace = true
hex.workspace = true
bip39.workspace = true
console.workspace = true
dialoguer.workspace = true
serde_json.workspace = true
sha3 = "0.10.8"
curve25519-dalek = "4.1.3"
