[package]
name = "seedctl-xrp"
description.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
seedctl-core.workspace = true
bip32.workspace = true
hex.workspace = true
bip39.workspace = true
console.workspace = true
dialoguer.workspace = true
serde_json.workspace = true
sha2.workspace = true
reqwest.workspace = true
ripemd = "0.1.3"
bs58 = "0.5"
k256 = "0.13.4"
